# ArxivLens

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py  test_pipeline.py  test_project.py
app/core/: exceptions.py  logger.py  settings.py
app/evaluation/: langsmith_tracer.py
app/generation/: __init__.py  adaptive_rag.py  pipeline.py  prompts.py  test_generation.py
app/indexing/: __init__.py  chunker.py  embedder.py  test_indexing.py  vector_store.py
app/ingestion/: __init__.py  arxiv_fetcher.py  pdf_parser.py  test_ingestion.py  vision_processor.py
app/models/: __init__.py  schemas.py
app/retrieval/: __init__.py  cache.py  hybrid_retriever.py  reranker.py  test_retrieval.py
