[project]
name = "arxivlens"
version = "0.1.0"
description = "Multimodal RAG for ArXiv papers"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "arxiv>=2.1.3",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "loguru>=0.7.3",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.24.14",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.2.6",
    "requests>=2.32.0",
    "streamlit>=1.40.0",
]